--- a/client/projects/ng-alain-amis/src/lib/components/page/page.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/page/page.component.html
@@ -2,5 +2,5 @@
 </page-header>
 
 <nz-card>
-    <!-- <amis-dynamic [body]="body"></amis-dynamic> -->
+    <amis-dynamic [body]="body" *ngIf="body"></amis-dynamic>
 </nz-card>
