--- a/client/src/app/routes/dynamic-demo/sample-case/sample-case.component.html
+++ b/client/src/app/routes/dynamic-demo/sample-case/sample-case.component.html
@@ -4,7 +4,7 @@
 </pre>
     </nz-tab>
     <nz-tab nzTitle="ng-alain">
-        <dynamic-ui [body]="$any(json)"></dynamic-ui>
+        <!-- <dynamic-ui [body]="$any(json)"></dynamic-ui> -->
     </nz-tab>
     <nz-tab nzTitle="amis">
         <div #sample></div>
