--- a/client/projects/ng-alain-amis/src/lib/components/page/page.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/page/page.component.html
@@ -1,6 +1,9 @@
-<page-header [title]="title">
-</page-header>
+<!-- <page-header [title]="title">
+</page-header> -->
+<div class="page">
+    <h4 class="page-title">{{title}}</h4>
+    <nz-card>
 
-<nz-card>
-    <amis-dynamic [body]="body" *ngIf="body"></amis-dynamic>
-</nz-card>
+        <amis-dynamic [body]="body" *ngIf="body"></amis-dynamic>
+    </nz-card>
+</div>
