--- a/client/projects/ng-alain-amis/src/lib/components/form-item/input-password/input-password.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/form-item/input-password/input-password.component.html
@@ -6,9 +6,13 @@
     </nz-form-label>
     <nz-form-control nzHasFeedback nzValidatingTip="校验中">
         <div [formGroup]="formGroup">
+            <ng-container *ngIf="!disabled">
+                <input type="password" nz-input [nzSize]="$any(size)" [formControlName]="name" />
+            </ng-container>
 
-
-            <input type="text" nz-input [nzSize]="$any(size)" [disabled]="$any(disabled)" [nzSize]="$any(size)" [formControlName]="name" />
+            <ng-container *ngIf="disabled">
+                <input type="password" nz-input [disabled]="true" [nzSize]="$any(size)" [formControlName]="name" />
+            </ng-container>
         </div>
     </nz-form-control>
 </nz-form-item>
