--- a/client/src/app/routes/dynamic-demo/toml-samples/dynamic-route-samples/dynamic-route-samples.component.css
+++ b/client/src/app/routes/dynamic-demo/toml-samples/dynamic-route-samples/dynamic-route-samples.component.css
@@ -5,3 +5,9 @@
     cursor: pointer;
     color: lightseagreen;
 }
+
+.code-block {
+    background: rgb(68, 68, 68);
+    color: #fdff;
+    padding: 20px;
+}
