--- a/client/projects/ng-alain-amis/src/lib/components/form-item/input-text/input-text.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/form-item/input-text/input-text.component.html
@@ -1,14 +1,16 @@
 <nz-form-item>
-    <nz-form-label [nzRequired]="required" *ngIf="label !== false">{{ label }}
-        <ng-container *ngIf="labelRemark">
-            <i nz-icon nzType="question-circle" nzTheme="fill" [nzTooltipTitle]="labelRemark" nzTooltipPlacement="topLeft" nz-tooltip></i>
-        </ng-container>
-    </nz-form-label>
-    <nz-form-control nzHasFeedback nzValidatingTip="校验中">
-        <div [formGroup]="formGroup">
-
-
-            <input type="text" nz-input [nzSize]="$any(size)" [disabled]="$any(disabled)" [nzSize]="$any(size)" [formControlName]="name" />
-        </div>
-    </nz-form-control>
+  <nz-form-label [nzRequired]="required" *ngIf="label !== false" [nzTooltipTitle]="labelRemark?.content ? labelRemarkContent : labelRemark"
+    >{{ label }}
+    <ng-template #labelRemarkContent>
+      <div [innerHtml]="labelRemark.content"></div>
+    </ng-template>
+    <!-- <ng-container *ngIf="labelRemark">
+      <i nz-icon nzType="question-circle" nzTheme="fill" [nzTooltipTitle]="labelRemark" nzTooltipPlacement="topLeft" nz-tooltip></i>
+    </ng-container> -->
+  </nz-form-label>
+  <nz-form-control nzHasFeedback nzValidatingTip="校验中">
+    <div [formGroup]="formGroup">
+      <input type="text" nz-input [nzSize]="$any(size)" [disabled]="$any(disabled)" [nzSize]="$any(size)" [formControlName]="name" />
+    </div>
+  </nz-form-control>
 </nz-form-item>
