--- a/client/projects/ng-alain-amis/src/lib/components/form-item/input-text/input-text.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/form-item/input-text/input-text.component.html
@@ -1,16 +1,13 @@
-<nz-form-item>
-  <nz-form-label [nzRequired]="required" *ngIf="label !== false" [nzTooltipTitle]="labelRemark?.content ? labelRemarkContent : labelRemark"
-    >{{ label }}
-    <ng-template #labelRemarkContent>
-      <div [innerHtml]="labelRemark.content"></div>
-    </ng-template>
-    <!-- <ng-container *ngIf="labelRemark">
-      <i nz-icon nzType="question-circle" nzTheme="fill" [nzTooltipTitle]="labelRemark" nzTooltipPlacement="topLeft" nz-tooltip></i>
-    </ng-container> -->
-  </nz-form-label>
-  <nz-form-control nzHasFeedback nzValidatingTip="校验中">
-    <div [formGroup]="formGroup">
-      <input type="text" nz-input [nzSize]="$any(size)" [disabled]="$any(disabled)" [nzSize]="$any(size)" [formControlName]="name" />
-    </div>
-  </nz-form-control>
+<nz-form-item *ngIf="!hidden||visible">
+    <nz-form-label [nzRequired]="required" *ngIf="label !== false" [nzTooltipTitle]="labelRemark?.content ? labelRemarkContent : labelRemark">{{ label }}
+        <ng-template #labelRemarkContent>
+            <div [innerHtml]="getLabelContent()"></div>
+        </ng-template>
+    </nz-form-label>
+    <nz-form-control nzHasFeedback nzValidatingTip="校验中" [nzExtra]="description">
+        <div [formGroup]="formGroup">
+            <input type="text" nz-input [nzSize]="$any(size)" [nzSize]="$any(size)" [formControlName]="name" *ngIf="!disabled" [disabled]="disabled" />
+            <input type="text" nz-input [nzSize]="$any(size)" [nzSize]="$any(size)" *ngIf="disabled" [disabled]="disabled " />
+        </div>
+    </nz-form-control>
 </nz-form-item>
