--- a/client/projects/ng-alain-amis/src/lib/components/form-item/input-password/input-password.component.html
+++ b/client/projects/ng-alain-amis/src/lib/components/form-item/input-password/input-password.component.html
@@ -6,13 +6,8 @@
     </nz-form-label>
     <nz-form-control nzHasFeedback nzValidatingTip="校验中">
         <div [formGroup]="formGroup">
-            <ng-container *ngIf="!disabled">
-                <input type="password" nz-input [nzSize]="$any(size)" [formControlName]="name" />
-            </ng-container>
-
-            <ng-container *ngIf="disabled">
-                <input type="password" nz-input [disabled]="true" [nzSize]="$any(size)" [formControlName]="name" />
-            </ng-container>
+            <input type="password" nz-input [nzSize]="$any(size)" [placeholder]="placeholder" [nzSize]="$any(size)" [formControlName]="name" *ngIf="!disabled" [disabled]="disabled" />
+            <input type="password" nz-input [nzSize]="$any(size)" [placeholder]="placeholder" [nzSize]="$any(size)" *ngIf="disabled" [disabled]="disabled " />
         </div>
     </nz-form-control>
 </nz-form-item>
